--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "underscore": "",
     "coffee-script": "1.1.2",
     "phantom": "",
-    "dropbox": ""
+    "request": "",
+    "dbox": ""
  },
   "engines": {
     "node": "0.6.x"
