--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "2.5.9",
     "underscore": "",
     "coffee-script": "1.7.1",
-    "request": "",
+    "request": "2.36.0",
     "dbox": "0.6.3",
     "jade": "1.3.1",
     "m3u": ""
