--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "request": "2.36.0",
     "dbox": "0.6.3",
     "jade": "1.3.1",
-    "m3u": "0.0.2"
+    "m3u": "0.0.2",
+    "phantom": "0.6.3"
  },
   "engines": {
     "node": "0.10.x",
